# template_cmake_library

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  my_lib.cmake.in  notes.txt  vcpkg.json
.github/workflows/: c-cpp.yml
include/: my_lib_export.h  source.hpp
scripts/: build_step.sh  generate_step.sh
source/: source.cxx
test/: main.cxx
